--- a/files/食用菌加工及深加工品牌打造/styles.css
+++ b/files/食用菌加工及深加工品牌打造/styles.css
@@ -2814,8 +2814,8 @@
 #u424 {
   border-width:0px;
   position:absolute;
-  left:100px;
-  top:1885px;
+  left:109px;
+  top:1664px;
   width:80px;
   height:23px;
   display:flex;
@@ -4034,5 +4034,51 @@
 #u460_text {
   border-width:0px;
   word-wrap:break-word;
+  text-transform:none;
+}
+#u461_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:80px;
+  height:23px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+  color:#666666;
+}
+#u461 {
+  border-width:0px;
+  position:absolute;
+  left:109px;
+  top:1953px;
+  width:80px;
+  height:23px;
+  display:flex;
+  font-family:'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+  color:#666666;
+}
+#u461 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u461_text {
+  border-width:0px;
+  white-space:nowrap;
   text-transform:none;
 }
