--- a/data/styles.css
+++ b/data/styles.css
@@ -160,4 +160,31 @@
 }
 ._链接按下 {
 }
+.box_21 {
+}
+.line2 {
+}
+.label1 {
+  font-size:14px;
+  text-align:left;
+}
+.heading_1 {
+  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial', sans-serif;
+  font-weight:700;
+  font-style:normal;
+  font-size:32px;
+  text-align:left;
+}
+.shape1 {
+}
+.image2 {
+  color:#000000;
+}
+.font_awesome_5_free_solid {
+  font-family:'Font Awesome 5 Free Solid', 'Font Awesome 5 Free Regular', 'Font Awesome 5 Free', sans-serif;
+  font-weight:900;
+  font-style:normal;
+}
+._默认样式1 {
+}
 textarea, select, input, button { outline: none; }
