--- a/files/行情数据/styles.css
+++ b/files/行情数据/styles.css
@@ -494,7 +494,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -508,7 +508,7 @@
   width:32px;
   height:32px;
   display:flex;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -538,7 +538,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -563,7 +563,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -588,7 +588,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -722,7 +722,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -736,7 +736,7 @@
   width:32px;
   height:32px;
   display:flex;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -766,7 +766,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -791,7 +791,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -816,7 +816,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
