--- a/files/全国各地区报价/styles.css
+++ b/files/全国各地区报价/styles.css
@@ -1528,7 +1528,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1542,7 +1542,7 @@
   width:32px;
   height:32px;
   display:flex;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1572,7 +1572,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1597,7 +1597,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1622,7 +1622,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1756,7 +1756,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1770,7 +1770,7 @@
   width:32px;
   height:32px;
   display:flex;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1800,7 +1800,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1825,7 +1825,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
@@ -1850,7 +1850,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Font Awesome 5 Pro', sans-serif;
+  font-family:'Font Awesome 5 Pro Light', 'Font Awesome 5 Pro Regular', 'Font Awesome 5 Pro', sans-serif;
   font-weight:300;
   font-style:normal;
   font-size:16px;
