--- a/files/食用菌加工及深加工品牌打造/styles.css
+++ b/files/食用菌加工及深加工品牌打造/styles.css
@@ -3528,20 +3528,20 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial', sans-serif;
-  font-weight:700;
+  font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC', sans-serif;
+  font-weight:650;
   font-style:normal;
 }
 #u448 {
   border-width:0px;
   position:absolute;
-  left:853px;
+  left:814px;
   top:1771px;
   width:55px;
   height:27px;
   display:flex;
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial', sans-serif;
-  font-weight:700;
+  font-family:'PingFangSC-Semibold', 'PingFang SC Semibold', 'PingFang SC', sans-serif;
+  font-weight:650;
   font-style:normal;
 }
 #u448 .text {
@@ -3577,7 +3577,7 @@
 #u449 {
   border-width:0px;
   position:absolute;
-  left:958px;
+  left:944px;
   top:1771px;
   width:55px;
   height:27px;
@@ -3619,7 +3619,7 @@
 #u450 {
   border-width:0px;
   position:absolute;
-  left:1064px;
+  left:1075px;
   top:1771px;
   width:55px;
   height:27px;
